--- a/PootCal/PootCal/CAL/Base.lproj/Main.storyboard
+++ b/PootCal/PootCal/CAL/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -111,6 +112,9 @@
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="v8g-mc-vam" customClass="JTAppleCalendarView" customModule="JTAppleCalendar">
                                         <rect key="frame" x="0.0" y="15.5" width="343" height="338"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="v8g-mc-vam" secondAttribute="height" multiplier="343:338" id="pHx-wo-8R4"/>
+                                        </constraints>
                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8gG-lx-s0I">
                                             <size key="itemSize" width="75" height="75"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -146,7 +150,7 @@
                                                         </label>
                                                         <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Qx-Wf-BTE" userLabel="StatusNotation">
                                                             <rect key="frame" x="34" y="20" width="6" height="6"/>
-                                                            <color key="backgroundColor" red="1" green="0.96275351839273449" blue="0.32278076589849236" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <color key="backgroundColor" red="1" green="0.96470588235294119" blue="0.32156862745098036" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="6" id="ZhK-1N-CIa"/>
                                                                 <constraint firstAttribute="height" constant="6" id="gCW-Nx-TK9"/>
@@ -181,11 +185,12 @@
                                     </collectionView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="bottom" secondItem="v8g-mc-vam" secondAttribute="bottom" id="Ovm-Wa-xJr"/>
+                                    <constraint firstItem="v8g-mc-vam" firstAttribute="leading" secondItem="mon-L5-hi3" secondAttribute="leading" id="2EH-AQ-cSP"/>
+                                    <constraint firstAttribute="trailing" secondItem="v8g-mc-vam" secondAttribute="trailing" id="Nzu-u3-FhH"/>
+                                    <constraint firstAttribute="bottom" secondItem="v8g-mc-vam" secondAttribute="bottom" id="Z7L-Og-eAb"/>
                                     <constraint firstAttribute="height" constant="353.5" id="ZQI-GS-efI"/>
-                                    <constraint firstAttribute="trailing" secondItem="v8g-mc-vam" secondAttribute="trailing" id="hAu-5e-r4G"/>
                                     <constraint firstItem="v8g-mc-vam" firstAttribute="top" secondItem="jfT-Z4-SaK" secondAttribute="bottom" id="tfv-4X-Jb3"/>
-                                    <constraint firstItem="v8g-mc-vam" firstAttribute="leading" secondItem="mon-L5-hi3" secondAttribute="leading" id="weC-x3-2YN"/>
+                                    <constraint firstItem="v8g-mc-vam" firstAttribute="top" secondItem="jfT-Z4-SaK" secondAttribute="bottom" id="zgb-yC-E0G"/>
                                 </constraints>
                             </stackView>
                         </subviews>
